Changes to Header and Summary text alignment, background color.  Changed Index to lowercase i index, in an attempt to fix default view name

--- a/Index.html
+++ b/Index.html
@@ -9,31 +9,41 @@
 </head>
 
 <body>
-    <nav>
-        <a href="https://www.linkedin.com/in/kevin-ye-35913a78/">My LinkedIn</a> |
-        <a href="https://github.com/Kevin-L-Ye">My GitHub</a> 
-    </nav>
-    <div id="About_Me">
-        <h1 id="My_Name"> <em> Kevin Ye</em></h1>
-    </div>
-    <div id="Summary_and_image">
-        <div id="Summary">
-            Hello!  My name is Kevin Ye, and I am an inspiring junior developer, currently studying at Tech Elevator in Cleveland, Ohio. <br />
-            My previous experience includes a Bachelor's Degree in Chemical Engineering from Case Western Reserve University, as well as a background in sales. <br />
-            Highlights of my past work includes
-
-            My time working has given me a newfound appreciate for the work that software developers do, and I'm looking to transition my career in a new direction. <br />
-            I'm looking to join a group that shares my passion for learning and enjoyment of problem-solving! <br />
-        </div>
-        <div id="Personal_Image">
-            Test Test Test Test Test Test Test Test Test Test Test Test Test Test 
+    <div id="Header">
+        <nav>
+            <a href="https://www.linkedin.com/in/kevin-ye-35913a78/">My LinkedIn</a> |
+            <a href="https://github.com/Kevin-L-Ye">My GitHub</a>
+        </nav>
+        <div id="About_Me">
+            <h1 id="My_Name"> <em> Kevin Ye</em></h1>
         </div>
     </div>
-
-    <hr/> 
-    <div id="My Projects">
-        
+    <div id="Left Block">
     </div>
+
+    <div id="Center Block">
+
+        <div id="Summary_and_image">
+            <div id="Summary">
+                Hello!  My name is Kevin Ye, and I am an inspiring junior developer, currently studying at Tech Elevator in Cleveland, Ohio. <br />
+                My previous experience includes a Bachelor's Degree in Chemical Engineering from Case Western Reserve University, as well as a background in sales. <br />
+                Highlights of my past work include <br />
+
+                My time working has given me a newfound appreciate for the work that software developers do, and I'm looking to transition my career in a new direction. <br />
+                I'm looking to join a group that shares my passion for learning and enjoyment of problem-solving! <br />
+            </div>
+            <div id="Personal_Image">
+                Test Test Test Test Test Test Test Test Test Test Test Test Test Test
+            </div>
+        </div>
+
+        <hr />
+        <div id="My Projects">
+
+        </div>
+
+    </div>
+
 </body>
 
 </html>
