--- a/index.html
+++ b/index.html
@@ -16,6 +16,35 @@
 </head>
 
 <body>
+
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle"
+                        data-toggle="collapse"
+                        data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+
+                </button> <a href="#" class="navbar-brand">
+                    Kevin Ye - Junior Software Developer
+                </a>
+
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="contact.html">Contact / About</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="new.html">New Products</a></li>
+                    <li><a href="media.html">Media</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="container header">
         <nav>
             <a href="https://www.linkedin.com/in/kevin-ye-35913a78/">My LinkedIn</a> |
@@ -26,6 +55,39 @@
             <h2>Junior Software Developer</h2>
         </div>
     </div>
+
+
+
+    <div id="carousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Carousel Items -->
+        <div class="carousel-inner">
+
+            <div class="item active">
+                <img src="http://lorempixel.com/1500/600/abstract/1" alt="Slide 1" />
+            </div>
+            <div class="item">
+                <img src="http://lorempixel.com/1500/600/abstract/2" alt="Slide 2" />
+            </div>
+            <div class="item">
+                <img src="http://lorempixel.com/1500/600/abstract/3" alt="Slide 3" />
+            </div>
+        </div>
+        <a href="#carousel" class="left carousel-control" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a href="#carousel" class="right carousel-control" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+        <!-- /Items -->
+
+    </div>
+
     <div class="col-sm-3" id="Left_Block">
         Why when I minimize the browser is this going below the actual project?
         Seriously.
@@ -44,18 +106,10 @@
                 I'm looking to join a group that shares my passion for learning and enjoyment of problem-solving!
             </div>
             <div class="container hidden-xs" id="Personal_Image">
-                <div class="container">
-                    <img src="~/images/Kevin Ye Image.jpg" alt="Kevin Ye Image" />
-                </div>
+                    <img src="images/Kevin Ye Image.jpg" alt="Kevin Ye Image" id="My_Image" />
             </div>
         </div>
-
-        <hr />
-        <div class="container-fluid" id="Sidebar">
-            So, is this working?
-        </div>
-
     </div>
-
+    
 </body>
 </html>
